# flexlibs

./: .gitignore  .pre-commit-config.yaml  API_CLUTTER_AUDIT.md  API_CLUTTER_CLEANUP_COMPLETE.md  API_DESIGN_IMPROVEMENTS.md  API_DESIGN_USER_CENTRIC.md  API_PHILOSOPHY_SHIFT.md  ARCHITECTURE.md  BACK_REFERENCE_IMPLEMENTATION_GUIDE.txt  CASTING_AUDIT_REPORT.md  CASTING_FIXES_COMPLETED.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODING_STANDARDS.md  COMPLETE_PROPERTY_AUDIT.md  COMPREHENSIVE_MISSING_FEATURES_REPORT.md  COPYOBJECT_FIX_SUMMARY.md  CRAIGS_OPERATIONS_REVIEW.md  CRAIGS_REVIEW.md  DEEP_CLONE_ANALYSIS.md  DEEP_CLONE_IMPLEMENTATION.md  DEEP_PARAMETER_REMOVAL.md  DELEGATION_ANALYSIS_REPORT.md  DELEGATION_PATTERN_GUIDE.md  DELEGATION_SUMMARY.md  DEMO_TEST_RESULTS_INDEX.md  DOCUMENTATION_SUMMARY.md  DUPLICATE_ANALYSIS.md  DUPLICATE_TEST_REPORT.md  FIELDWORKS_FEATURE_AUDIT.md  FINAL_BATTLE_TEST_RESULTS.md  FIX_COMPLETE_GUIDE.md  FLEXLIBS_COMPLETION_PRIORITIES.md  FLEXTOOLS_COMPATIBILITY_COMPLETE.md  FLEXTOOLS_LCM_PROPERTIES_AUDIT.md  FLEXTOOLS_MIGRATION_COMPLETE.md  FLEXTOOLS_TO_FLEXLIBS_MAPPING.md  FLEXTOOLS_WRAPPERS_COMPLETE.md  FLEX_CONVENIENCE_FEATURES.md  (+88 more)
.claude/: TEST_COMPLETION_SUMMARY.md  V3_0_0_RELEASE_COMPLETE.md  V3_0_0_RELEASE_SUMMARY.txt  consolidation_test_report.md  ralph-loop.local.md  settings.json  settings.local.json
Temp/: AGENT_REVIEW_TEMPLATE.md  CRAIG_PATTERN_ANALYSIS.md  DELEGATION_COMPLETE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  LINGUISTIC_QUICK_REFERENCE.md  LINGUISTIC_VALIDATION_GUIDE.md  MASTER_REVIEW_PLAN.md  QC_CHECKLIST.md  (+7 more)
(+673 files in other folders)
